# mosync

./: Makefile  README.md  mosync.py  notebook.py  pyproject.toml  tests.py
.github/workflows/: test.yml
